--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,106 @@
 body{
-  background-color: blueviolet;
+  color:#666666;
+  background-color: #f9f8f6;
+  background-position: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  line-height: 1.4em;
+  margin:0px;
 }
-h1{
-  text-align: center;
-  font-family: 'Indie Flower', cursive;
+.wrapper{
+  width:1140px;
+  margin:20px auto 20px auto;
+  border:2px solid #000000;
+  background-color: #ffffff;
+}
+header{
+  height:160px;
+  
 
 }
-#salmon{
-  margin:5px 0px 0px 350px;
+h1{
+ 
+  text-indent: -9999px;
+  width:940px;
+  height:130px;
+  margin:0px;
+}
+nav,footer{
+  clear:both;
+  color:#ffffff;
+  background-color: #aeaca8;
+  height:30px;
+
+}
+nav ul{
+  margin:0px;
+  padding:5px 0px 5px 30px;
 }
 nav li{
   display:inline;
-  padding:5px 50px 5px 100px;
-  margin:5px 100px 200px 100px;
-  
+  margin-right:40px;
 }
-nav{
-  padding:5px 100px 10px 100px;
-  background-color:honeydew;
+nav li a{
+  color:#ffffff;
 }
-a:hover{
-  color :#cc3333;
-  background-color: #ffffff;
+nav li a:hover,nav li a.current{
+  color:#000000;
 }
-table {
-  width:600px;
-  margin-left: 100px;
-  margin-top: 50px;
-  }
-  th,td{
-    padding: 7px 10px 10px 10px;
+section.courses{
+  float:left;
+  width:659px;
+  border-right:1px solid #eeeeee;
+}
+article{
+  clear:both;
+  overflow:auto;
+  width:100%;
+}
+hgroup{
+  margin-top:40px;
+}
+figure{
+  float: left;
+  width:290px;
+  height:220px;
+  padding:5px;
+  margin:20px;
+  border:1px solid #eeeeee;
+}
+aside{
+  width:230px;
+  float:left;
+  padding:0px 0px 0px 20px
+}
+aside section a{
+  display: block;
+  padding:10px;
+  border-bottom: 1px solid #eeeeee;
+}
+aside section a:hover{
+  color:#985d6a;
+  background-color: #efefef;
+}
+a{
+  color:#de6581;
+  text-decoration: none;
+}
+h1,h2,h3{
+  font-weight: normal;
+}
+h2{
+  margin:10px 0px 5px 0px;
+  padding:0px;
+}
 
-  }
-  th{
-    text-transform:uppercase;
-    letter-spacing: 0.1em;
-    font-size: 90%;
-    border-bottom: 2px solid #999;
-    text-align: left;
-  }
-  p{
-    font-family: Arial, Verdana;
-     color:red;
-  }
-  
+h3{
+  margin:0px 0px 10px 0px;
+  color:#de6581
+}
+aside h2{
+  padding:30px 0px 10px 0px;
+  color:#de6581;
+}
+footer{
+  font-size: 80%;
+  padding:7px 0px 0px 20px;
+}
