fixed the bug in the function calculating total cookies in the footer row

--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,9 @@ header{
 
 }
 h1{
- 
-  text-indent: -9999px;
-  width:940px;
-  height:130px;
-  margin:0px;
+   height:100px;
+  margin:20px 0px 10px 0px;
+  text-align: center;
 }
 nav,footer{
   clear:both;
@@ -34,9 +32,10 @@ nav,footer{
 nav ul{
   margin:0px;
   padding:5px 0px 5px 30px;
+  list-style-type: none;
 }
 nav li{
-  display:inline;
+  display:inline-block;
   margin-right:40px;
 }
 nav li a{
