--- a/css/salesstyles.css
+++ b/css/salesstyles.css
@@ -4,6 +4,10 @@ background:gray;
 h1{
   text-align: center;
 }
+table {
+  margin: 2em auto;
+  width: 80%;
+}
 
 table.excel{
   background: #fff;
@@ -27,6 +31,8 @@ table.excel td{
   border:1px solid #ccc;
   padding:.5rem 1.5rem;
 }
+
+
 img {
   border-radius: 50%;
   -webkit-transition: -webkit-transform .8s ease-in-out;
